fixup spacing

--- a/src/style/settings.scss
+++ b/src/style/settings.scss
@@ -12,7 +12,6 @@
 }
 
 #settings-menu {
-    width: 100%;
     label {
         margin-right: 10px;
         display: flex;
